--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,4 +1,4 @@
-# Terraform format: Checker and fixer
+
 - id: terraform-fmt
   name: Terraform Format (check & fix)
   description: Rewrites all Terraform configuration files to a canonical format (see documentation)
@@ -8,7 +8,6 @@
   exclude: ^.*\.(hcl|json|bash|config|lock|sh|txt|md|zip)$
   require_serial: true
 
-# Terraform Cleaner
 - id: terraform-clean
   name: Terraform Metadata Cleaner
   description: Clean .terraform folder in local execution contexts
@@ -29,7 +28,6 @@
   exclude: ^.*\.(hcl|json|bash|config|lock|sh|txt|md|zip)$
   require_serial: true
 
-# Terraform validation: require initialization
 - id: terraform-validate
   name: Terraform validate
   description: Validates all Terraform configuration files.
@@ -39,7 +37,6 @@
   files: (\.tf|\.tfvars)$
   exclude: \.terraform\/.*$
 
-# Terraform Documentation: Automatically generate and keep updated the documentation
 - id: terraform-docs
   name: Terraform Documentation
   description: Generate and keep up to date the documentation of terraform components
@@ -49,7 +46,6 @@
   exclude: \.terraform\/.*$
   require_serial: true
 
-# Terraform Security: Run a security analysis using TFSEC
 - id: terraform-sec
   name: Terraform Security Analysis
   description: Validates all Terraform configuration from the security point of view
@@ -63,6 +59,15 @@
   name: Terraform Plan
   description: Run a complete terraform plan command
   entry: hooks/terraform-plan.sh
+  language: script
+  files: (\.tf|\.tfvars)$
+  exclude: \.terraform\/.*$
+  require_serial: true
+
+- id: terraform-init
+  name: Terraform Initialisation
+  description: Run a complete terraform init command
+  entry: hooks/terraform-init.sh
   language: script
   files: (\.tf|\.tfvars)$
   exclude: \.terraform\/.*$
