--- a/package.json
+++ b/package.json
@@ -7,17 +7,14 @@
     "lib:install": "chmod +x setup/install-all-packages.sh && ./setup/install-all-packages.sh",
     "push": "git push --follow-tags --set-upstream origin $(git branch | sed -n -e 's/^\\* \\(.*\\)/\\1/p')",
     "push:force": "git push --follow-tags --set-upstream origin $(git branch | sed -n -e 's/^\\* \\(.*\\)/\\1/p') --force",
-    "release": "bump patch && git add --all -v",
-    "prerelease": "bump prerelease && git add --all -v",
-    "releasemajor": "bump major && git add --all -v"
+    "release": "standard-version -a && git add --all -v"
   },
   "dependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "auto-changelog": "^2.2.1",
     "cz-conventional-changelog": "^3.3.0",
-    "husky": "4.3.0",
-    "version-bump-prompt": "^6.1.0"
+    "husky": "4.3.0"
   },
   "lint-staged": {
     "*.{tf,tfvars}": [
